# 3benches3chips

./: CMakeLists.txt  README.md  convolution.c  instructions.txt
src/: convolultion_micro.c  convolution.c  convolution_dsp.c  convolution_micro.c  fakeparser.c  fakeparser_dsp.c  fakeparser_micro.c  kmeans.c  kmeans_dsp.c  kmeans_micro.c
